BOOKING-144: Updated api-spec
